--- a/_publications/2017-09-20-welcome.md
+++ b/_publications/2017-09-20-welcome.md
@@ -1,7 +1,7 @@
 ---
-layout: single
 title: "Welcome!"
 collection: publications
+permalink: /publications/2010-09-20-welcome
 excerpt: 'Let's start it...'
 categories:
   - General
