--- a/_publications/2017-09-20-welcome.md
+++ b/_publications/2017-09-20-welcome.md
@@ -1,14 +1,14 @@
 ---
 title: "Welcome!"
 collection: publications
-permalink: /publications/2010-09-20-welcome
+permalink: /publications/2017-09-20-welcome
 excerpt: 'Let's start it...'
 categories:
   - General
   - Welcome
 ---
 
-Hi everyone!
+# Hi everyone!
 I’m Marc Girones, your host on My Personal Blog!
 
 I started this blog to share my experience with programming in C++ I
