--- a/_publications/2017-09-20-welcome.md
+++ b/_publications/2017-09-20-welcome.md
@@ -1,9 +1,9 @@
 ---
-title: "Welcome!"
+title: "Welcome"
 collection: publications
 permalink: /publications/2017-09-20-welcome
-excerpt: 'Let's start it...'
-categories:
+excerpt: 'Let's start it'
+tags:
   - General
   - Welcome
 ---
