--- a/_publications/2017-09-20-welcome.md
+++ b/_publications/2017-09-20-welcome.md
@@ -2,13 +2,14 @@
 title: "Welcome"
 collection: publications
 permalink: /publications/2017-09-20-welcome
-excerpt: 'Let's start it'
+excerpt: 'Lets start it'
 tags:
   - General
   - Welcome
 ---
 
 # Hi everyone!
+
 I’m Marc Girones, your host on My Personal Blog!
 
 I started this blog to share my experience with programming in C++ I
