--- a/_publications/2017-09-20-welcome.md
+++ b/_publications/2017-09-20-welcome.md
@@ -2,7 +2,7 @@
 title: "Welcome"
 collection: publications
 permalink: /publications/2017-09-20-welcome
-excerpt: 'Lets start it'
+excerpt: 'Lets start it...'
 tags:
   - General
   - Welcome
