--- a/_publications/2017-10-01-xmacros.md
+++ b/_publications/2017-10-01-xmacros.md
@@ -2,9 +2,9 @@
 title: "X-Macros"
 collection: publications
 permalink: /publications/2017-10-01-xmacros
-excerpt: 'X-Macros in C/C++'
+excerpt: 'Mystery of X-Macros'
 tags:
-  - Programming
+  - C++ Programming
   - Macros
   - Code generation
 ---
@@ -22,84 +22,84 @@ There are a few aspects to macros that make them "bad":
 Let me explain what I’m refering!
 
 1. ### You can not debug macros:
-When you have a macro that translates to a number or a string, the source code will have the macro name, and many debuggers, you can't "see" what the macro translates to. So you don't actually know what is
-going on. The conclusion is you can not debug macros or you will use enum or const T.
+	When you have a macro that translates to a number or a string, the source code will have the macro name, and many debuggers, you can't "see" what the macro translates to. So you don't actually know what is
+	going on. The conclusion is you can not debug macros or you will use enum or const T.
 
 2. ### Macro expansion can lead to strange side effects.
-The famous one and the well known example is.
+	The famous one and the well known example is.
 
-{% highlight c++ %}
-	#define min(X, Y) ((X) < (Y) ? (X) : (Y))
-{% endhighlight  c++ %}
+	{% highlight c++ %}
+		#define min(X, Y) ((X) < (Y) ? (X) : (Y))
+	{% endhighlight  c++ %}
 
-What is wrong with this macro ? Let me show you
-{% highlight c++ %}
-	#include <stdio.h>
-	#define min(a, b) ((a) < (b)) ? (a) : (b)
-	int main() 
-	{
-		int a = 1, b = 2;
-		printf ("%d\n", min (a, b));
-		printf ("a=%d, b=%d\n\n", a, b);
-		printf ("%d\n", min (a++, b++));
-		printf ("a=%d, b=%d\n\n", a, b);
-	}
-{% endhighlight  c++ %}
+	What is wrong with this macro ? Let me show you
+	{% highlight c++ %}
+		#include <stdio.h>
+		#define min(a, b) ((a) < (b)) ? (a) : (b)
+		int main() 
+		{
+			int a = 1, b = 2;
+			printf ("%d\n", min (a, b));
+			printf ("a=%d, b=%d\n\n", a, b);
+			printf ("%d\n", min (a++, b++));
+			printf ("a=%d, b=%d\n\n", a, b);
+		}
+	{% endhighlight  c++ %}
 
-{% highlight c++ %}
-	Output::
-	$ gcc test.c && ./a.out
-	1
-	a=1, b=2
-	2
-	a=3, b=3
-	$
-{% endhighlight  c++ %}
+	{% highlight c++ %}
+		Output::
+		$ gcc test.c && ./a.out
+		1
+		a=1, b=2
+		2
+		a=3, b=3
+		$
+	{% endhighlight  c++ %}
 
-It's a classic trick. Double evaluation!!
+	It's a classic trick. Double evaluation!!
 
 3. ### Macros have no namespace
-If you have a macro that clashes with a name used elsewhere, you get macro replacements where you
-didn't want it, and this usually leads to strange error messages.
-If we have a macro:
+	If you have a macro that clashes with a name used elsewhere, you get macro replacements where you
+	didn't want it, and this usually leads to strange error messages.
+	If we have a macro:
 
-{% highlight c++ %}
-	#define begin() x = 0
-{% endhighlight  c++ %}
+	{% highlight c++ %}
+		#define begin() x = 0
+	{% endhighlight  c++ %}
 
-and we have some code in C++ that uses begin:
+	and we have some code in C++ that uses begin:
 
-{% highlight c++ %}
-	std::vector<int> v;
-	... stuff is loaded into v ...
-	
-	for (std::vector<int>::iterator it = myvector.begin() ; it != myvector.end(); ++it)
-		std::cout << ' ' << *it;
-{% endhighlight  c++ %}
+	{% highlight c++ %}
+		std::vector<int> v;
+		... stuff is loaded into v ...
+		
+		for (std::vector<int>::iterator it = myvector.begin() ; it != myvector.end(); ++it)
+			std::cout << ' ' << *it;
+	{% endhighlight  c++ %}
 
-Now assuming you have completely forgotten - or didn't even know about - the begin macro that lives in some header file that someone else wrote? What error message do you think you get, and where do you
-look for an error? And even more fun if you included that macro before the include - you'd be drowning in strange errors that makes absolutely no sense when you look at the code itself.
+	Now assuming you have completely forgotten - or didn't even know about - the begin macro that lives in some header file that someone else wrote? What error message do you think you get, and where do you
+	look for an error? And even more fun if you included that macro before the include - you'd be drowning in strange errors that makes absolutely no sense when you look at the code itself.
 
 4. ### Macros may affect things you don't realize.
 
-{% highlight c++ %}
-	#define begin() x = 0
-	#define end() x = 17
-	
-	... a few thousand lines of stuff here ...
-	
-	void dostuff()
-	{
-		int x = 7;
-		begin();
-		... more code using x ...
-		printf("x=%d\n", x);
-		end();
-	}
-{% endhighlight  c++ %}
+	{% highlight c++ %}
+		#define begin() x = 0
+		#define end() x = 17
+		
+		... a few thousand lines of stuff here ...
+		
+		void dostuff()
+		{
+			int x = 7;
+			begin();
+			... more code using x ...
+			printf("x=%d\n", x);
+			end();
+		}
+	{% endhighlight  c++ %}
 
-Without looking at the macro, you would think that begin is a function, which shouldn't affect x, but it is big
-fail!!!
+	Without looking at the macro, you would think that begin is a function, which shouldn't affect x, but it is big
+	fail!!!
 
 # Macros are obscure and evil, but they can be really useful when you want to generate code easily
 To use a corny example, let's have a header file color.h, and in that there's an enum for the colors:
@@ -118,7 +118,7 @@ something like this:
 You are happy with your solution and call it a day. But then, the inevitable happens. You have to add the new color.
 
 {% highlight c++ %}
-	enum Color { Cred, Cyellow, Cblue, Cgreen };
+	enum Color { eRed, eYellow, eBlue, eGreen };
 {% endhighlight c++ %}
 
 
@@ -133,9 +133,9 @@ Define the enum with the new requisite: non-sequential IDs
 {% highlight c++ %}
 	enum class Color
 	{
-		eRed = 0,
-		eBlue = 3,
-		eGreen = 7,
+		eRed =   1,
+		eBlue =  2,
+		eGreen = 4,
 		eCount
 	};
 {% endhighlight c++ %}
@@ -149,7 +149,7 @@ And conversation functions, getColorFromString and getStringFromColor.
 		if (!strcmp(str, "Green")) return eGreen;
 		return eAnimal_Count;
 	}
-	const char* getStringFromAnimal(Color aColor)
+	const char* getStringFromColor(Color aColor)
 	{
 		switch (aColor)
 		{
@@ -229,11 +229,11 @@ Define the enum enumeration by Macro X with the new requisite: non-sequential ID
 
 {% highlight c++ %}
 	#define Colors       \
-		X( RED, 0 )      \
-		X( BLUE, 3 )     \
-		X( GREEN, 7 )    \
-		X( YELLOW, 12 )  \
-		X( MAGENTA, 15 ) \
+		X( RED,      1 ) \
+		X( BLUE,     2 ) \
+		X( GREEN,    4 ) \
+		X( YELLOW,  16 ) \
+		X( MAGENTA, 32 ) \
 {% endhighlight c++ %}
 
 And now, we have to modify the definitions of X. So we have:
@@ -270,9 +270,9 @@ A call to static_cast<int>(Color::GREEN) would yield the expected 7 result.
 		#undef X
 		return Color::INVALID;
 	}
-	printf("%i\n", static_cast<int>(Color::MAGENTA)); 			// 15
+	printf("%i\n", static_cast<int>(Color::MAGENTA)); 			// 32
 	printf("%s\n", colorToString(Color::MAGENTA)); 				// MAGENTA
-	printf("%i\n", static_cast<int>(stringToColor("MAGENTA"))); // 15
+	printf("%i\n", static_cast<int>(stringToColor("MAGENTA"))); // 32
 
 {% endhighlight c++ %}
 
@@ -282,7 +282,12 @@ Thank you for reading!
 
 
 Source:
-* http://saltares.com/blog/
+[![http://coding-scars.com/x-macros/](http://saltares.com/blog/)](http://saltares.com/blog/)
+[![http://www.drdobbs.com/cpp/the-x-macro/228700289](http://coding-scars.com/x-macros/)](http://coding-scars.com/x-macros/)
+[![https://dustri.org/b/min-and-max-macro-considered-harmful.html](https://dustri.org/b/min-and-max-macro-considered-harmful.html)](https://dustri.org/b/min-and-max-macro-considered-harmful.html)
+[![https://stackoverflow.com/questions/14041453/why-are-preprocessor-macros-evil-and-what-are-the-alternatives/14041847#14041847](https://stackoverflow.com/questions/14041453/why-are-preprocessor-macros-evil-and-what-are-the-alternatives/14041847#14041847)](https://stackoverflow.com/questions/14041453/why-are-preprocessor-macros-evil-and-what-are-the-alternatives/14041847#14041847)
+
+
 * http://coding-scars.com/x-macros/
 * http://www.drdobbs.com/cpp/the-x-macro/228700289
 * https://dustri.org/b/min-and-max-macro-considered-harmful.html
