--- a/_publications/2017-10-01-xmacros.md
+++ b/_publications/2017-10-01-xmacros.md
@@ -32,7 +32,7 @@ Let me explain what I’m refering!
 		#define min(X, Y) ((X) < (Y) ? (X) : (Y))
 	{% endhighlight  c++ %}
 
-	What is wrong with this macro ? Let me show you
+What is wrong with this macro ? Let me show you
 	{% highlight c++ %}
 		#include <stdio.h>
 		#define min(a, b) ((a) < (b)) ? (a) : (b)
@@ -56,18 +56,18 @@ Let me explain what I’m refering!
 		$
 	{% endhighlight  c++ %}
 
-	It's a classic trick. Double evaluation!!
+It's a classic trick. Double evaluation!!
 
 3. ### Macros have no namespace
-	If you have a macro that clashes with a name used elsewhere, you get macro replacements where you
-	didn't want it, and this usually leads to strange error messages.
-	If we have a macro:
+If you have a macro that clashes with a name used elsewhere, you get macro replacements where you
+didn't want it, and this usually leads to strange error messages.
+If we have a macro:
 
 	{% highlight c++ %}
 		#define begin() x = 0
 	{% endhighlight  c++ %}
 
-	and we have some code in C++ that uses begin:
+and we have some code in C++ that uses begin:
 
 	{% highlight c++ %}
 		std::vector<int> v;
@@ -77,8 +77,7 @@ Let me explain what I’m refering!
 			std::cout << ' ' << *it;
 	{% endhighlight  c++ %}
 
-	Now assuming you have completely forgotten - or didn't even know about - the begin macro that lives in some header file that someone else wrote? What error message do you think you get, and where do you
-	look for an error? And even more fun if you included that macro before the include - you'd be drowning in strange errors that makes absolutely no sense when you look at the code itself.
+Now assuming you have completely forgotten - or didn't even know about - the begin macro that lives in some header file that someone else wrote? What error message do you think you get, and where do you look for an error? And even more fun if you included that macro before the include - you'd be drowning in strange errors that makes absolutely no sense when you look at the code itself.
 
 4. ### Macros may affect things you don't realize.
 
@@ -92,14 +91,15 @@ Let me explain what I’m refering!
 		{
 			int x = 7;
 			begin();
+			
 			... more code using x ...
+			
 			printf("x=%d\n", x);
 			end();
 		}
 	{% endhighlight  c++ %}
 
-	Without looking at the macro, you would think that begin is a function, which shouldn't affect x, but it is big
-	fail!!!
+Without looking at the macro, you would think that begin is a function, which shouldn't affect x, but it is big fail!!!
 
 # Macros are obscure and evil, but they can be really useful when you want to generate code easily
 To use a corny example, let's have a header file color.h, and in that there's an enum for the colors:
