--- a/_publications/2017-10-01-xmacros.md
+++ b/_publications/2017-10-01-xmacros.md
@@ -27,11 +27,9 @@ Let me explain what I’m refering!
 
 2. ### Macro expansion can lead to strange side effects.
 	The famous one and the well known example is.
-
 	{% highlight c++ %}
 		#define min(X, Y) ((X) < (Y) ? (X) : (Y))
 	{% endhighlight  c++ %}
-
 What is wrong with this macro ? Let me show you
 	{% highlight c++ %}
 		#include <stdio.h>
@@ -45,17 +43,14 @@ What is wrong with this macro ? Let me show you
 			printf ("a=%d, b=%d\n\n", a, b);
 		}
 	{% endhighlight  c++ %}
-
+Output:
 	{% highlight c++ %}
-		Output::
 		$ gcc test.c && ./a.out
 		1
 		a=1, b=2
 		2
 		a=3, b=3
-		$
 	{% endhighlight  c++ %}
-
 It's a classic trick. Double evaluation!!
 
 3. ### Macros have no namespace
