--- a/_publications/2017-10-01-xmacros.md
+++ b/_publications/2017-10-01-xmacros.md
@@ -21,17 +21,17 @@ There are a few aspects to macros that make them "bad":
 
 Let me explain what I’m refering!
 
-1. ### You can not debug macros:
+### 1. You can not debug macros:
 	When you have a macro that translates to a number or a string, the source code will have the macro name, and many debuggers, you can't "see" what the macro translates to. So you don't actually know what is
 	going on. The conclusion is you can not debug macros or you will use enum or const T.
 
-2. ### Macro expansion can lead to strange side effects.
+### 2. Macro expansion can lead to strange side effects.
 	The famous one and the well known example is.
 {% highlight c++ %}
 #define min(X, Y) ((X) < (Y) ? (X) : (Y))
 {% endhighlight  c++ %}
 
-What is wrong with this macro ? Let me show you
+	What is wrong with this macro ? Let me show you
 
 {% highlight c++ %}
 #include <stdio.h>
@@ -46,7 +46,7 @@ int main()
 }
 {% endhighlight  c++ %}
 
-Output:
+	Output:
 
 {% highlight c++ %}
 $ gcc test.c && ./a.out
@@ -56,18 +56,17 @@ a=1, b=2
 a=3, b=3
 {% endhighlight  c++ %}
 
-It's a classic trick. Double evaluation!!
+	It's a classic trick. Double evaluation!!
 
-3. ### Macros have no namespace
-If you have a macro that clashes with a name used elsewhere, you get macro replacements where you
-didn't want it, and this usually leads to strange error messages.
-If we have a macro:
+### 3. Macros have no namespace
+	If you have a macro that clashes with a name used elsewhere, you get macro replacements where you didn't want it, and this usually leads to strange error messages.
+	If we have a macro:
 
 {% highlight c++ %}
 	#define begin() x = 0
 {% endhighlight  c++ %}
 
-and we have some code in C++ that uses begin:
+	and we have some code in C++ that uses begin:
 
 {% highlight c++ %}
 std::vector<int> v;
@@ -77,9 +76,9 @@ for (std::vector<int>::iterator it = myvector.begin() ; it != myvector.end(); ++
 	std::cout << ' ' << *it;
 {% endhighlight  c++ %}
 
-Now assuming you have completely forgotten - or didn't even know about - the begin macro that lives in some header file that someone else wrote? What error message do you think you get, and where do you look for an error? And even more fun if you included that macro before the include - you'd be drowning in strange errors that makes absolutely no sense when you look at the code itself.
+	Now assuming you have completely forgotten - or didn't even know about - the begin macro that lives in some header file that someone else wrote? What error message do you think you get, and where do you look for an error? And even more fun if you included that macro before the include - you'd be drowning in strange errors that makes absolutely no sense when you look at the code itself.
 
-4. ### Macros may affect things you don't realize.
+### 4.Macros may affect things you don't realize.
 
 {% highlight c++ %}
 #define begin() x = 0
@@ -99,7 +98,7 @@ void dostuff()
 }
 {% endhighlight  c++ %}
 
-Without looking at the macro, you would think that begin is a function, which shouldn't affect x, but it is big fail!!!
+	Without looking at the macro, you would think that begin is a function, which shouldn't affect x, but it is big fail!!!
 
 # Macros are obscure and evil, but they can be really useful when you want to generate code easily
 To use a corny example, let's have a header file color.h, and in that there's an enum for the colors:
