--- a/_publications/2017-09-20-welcome.md
+++ b/_publications/2017-09-20-welcome.md
@@ -10,7 +10,7 @@ tags:
 
 # Hi everyone!
 
-My name is Marc Girones, your host on my Personal Blog!
+My name is Marc Girones, your host on my Personal Blog.
 
 I started this blog to share my experience with programming in C++ I
 gathered over the years, working as a programmer. I hope that
