--- a/_publications/2017-10-01-xmacros.md
+++ b/_publications/2017-10-01-xmacros.md
@@ -46,7 +46,7 @@ int main()
 }
 {% endhighlight  c++ %}
 
-	Output:
+Output:
 
 {% highlight c++ %}
 $ gcc test.c && ./a.out
@@ -59,14 +59,14 @@ a=3, b=3
 It's a classic trick. Double evaluation!!
 
 ### 3. Macros have no namespace
-	If you have a macro that clashes with a name used elsewhere, you get macro replacements where you didn't want it, and this usually leads to strange error messages.
-	If we have a macro:
+If you have a macro that clashes with a name used elsewhere, you get macro replacements where you didn't want it, and this usually leads to strange error messages.
+If we have a macro:
 
 {% highlight c++ %}
 	#define begin() x = 0
 {% endhighlight  c++ %}
 
-	and we have some code in C++ that uses begin:
+and we have some code in C++ that uses begin:
 
 {% highlight c++ %}
 std::vector<int> v;
@@ -98,7 +98,7 @@ void dostuff()
 }
 {% endhighlight  c++ %}
 
-Without looking at the macro, you would think that begin is a function, which shouldn't affect x, but it is big fail!!!
+Without looking at the macro, you would think that begin is a function, which shouldn't affect "x", but it is big fail!!!
 
 # Macros are obscure and evil, but they can be really useful when you want to generate code easily
 To use a corny example, let's have a header file color.h, and in that there's an enum for the colors:
