--- a/_publications/2017-10-01-xmacros.md
+++ b/_publications/2017-10-01-xmacros.md
@@ -78,7 +78,7 @@ for (std::vector<int>::iterator it = myvector.begin() ; it != myvector.end(); ++
 
 Now assuming you have completely forgotten - or didn't even know about - the begin macro that lives in some header file that someone else wrote? What error message do you think you get, and where do you look for an error? And even more fun if you included that macro before the include - you'd be drowning in strange errors that makes absolutely no sense when you look at the code itself.
 
-### 4.Macros may affect things you don't realize.
+### 4. Macros may affect things you don't realize.
 
 {% highlight c++ %}
 #define begin() x = 0
@@ -278,14 +278,8 @@ The X Macro technique works with any language with a half-decent text macro prep
 Thank you for reading!
 
 
-Source:
-[(http://saltares.com/blog/)](http://saltares.com/blog/)
-[!(http://coding-scars.com/x-macros/)](http://coding-scars.com/x-macros/)
-[![https://dustri.org/b/min-and-max-macro-considered-harmful.html](https://dustri.org/b/min-and-max-macro-considered-harmful.html)](https://dustri.org/b/min-and-max-macro-considered-harmful.html)
-[![https://stackoverflow.com/questions/14041453/why-are-preprocessor-macros-evil-and-what-are-the-alternatives/14041847#14041847](https://stackoverflow.com/questions/14041453/why-are-preprocessor-macros-evil-and-what-are-the-alternatives/14041847#14041847)](https://stackoverflow.com/questions/14041453/why-are-preprocessor-macros-evil-and-what-are-the-alternatives/14041847#14041847)
-
-
-* http://coding-scars.com/x-macros/
-* http://www.drdobbs.com/cpp/the-x-macro/228700289
-* https://dustri.org/b/min-and-max-macro-considered-harmful.html
-* https://stackoverflow.com/questions/14041453/why-are-preprocessor-macros-evil-and-what-are-the-alternatives/14041847#14041847
+Sources:
+    * [http://saltares.com/blog/](http://saltares.com/blog/)
+    * [http://coding-scars.com/x-macros/](http://coding-scars.com/x-macros/)
+    * [https://dustri.org/b/min-and-max-macro-considered-harmful.html](https://dustri.org/b/min-and-max-macro-considered-harmful.html)
+    * [https://stackoverflow.com/questions/14041453/why-are-preprocessor-macros-evil-and-what-are-the-alternatives/14041847#14041847](https://stackoverflow.com/questions/14041453/why-are-preprocessor-macros-evil-and-what-are-the-alternatives/14041847#14041847)
