3rd article-any

--- a/_publications/2017-09-01-welcome.md
+++ b/_publications/2017-09-01-welcome.md
@@ -1,11 +1,11 @@
 ---
 title: "Welcome"
 collection: publications
-permalink: /publications/2017-09-20-welcome
+permalink: /publications/2017-09-01-welcome
 excerpt: 'Lets start it...'
 tags:
-  - General
-  - Welcome
+  - general
+  - welcome
 ---
 
 # Hi everyone!
