--- a/_publications/2017-09-28-xmacros.md
+++ b/_publications/2017-09-28-xmacros.md
@@ -1,12 +1,12 @@
 ---
 title: "X-Macros"
 collection: publications
-permalink: /publications/2017-10-01-xmacros
+permalink: /publications/2017-09-28-xmacros
 excerpt: 'Mystery of X-Macros'
 tags:
-  - C++ Programming
-  - Macros
-  - Code generation
+  - c++11
+  - macros
+  - code generation
 ---
 
 # Macros
@@ -46,7 +46,7 @@ int main()
 }
 {% endhighlight  c++ %}
 
-Output:
+The code will output:
 
 {% highlight c++ %}
 $ gcc test.c && ./a.out
@@ -63,7 +63,7 @@ If you have a macro that clashes with a name used elsewhere, you get macro repla
 If we have a macro:
 
 {% highlight c++ %}
-	#define begin() x = 0
+#define begin() x = 0
 {% endhighlight  c++ %}
 
 and we have some code in C++ that uses begin:
