--- a/_publications/2017-10-01-any.md
+++ b/_publications/2017-10-01-any.md
@@ -9,7 +9,7 @@ tags:
   - variant-type
 ---
 
-#Problem
+# Problem
 
 I often have the requirement to own object instances, while preserving polymorphic behavior (i.e. own the object and hold it by pointer, or reference).
 
@@ -18,7 +18,7 @@ This is usually expressed as a pointer (most of the times, std::unique_ptr<T>),
 To avoid this, I need to implemented a polymorphic wrapper that able to store a heterogeneous collection.
 
 
-#The Basics
+# The Basics
 
 I know, many readers say that I know the solution. "void*"
 
@@ -37,7 +37,7 @@ class Any
 As you see, we have some basic form of the type, but it’s a bit of coding required to make sure Any is type-safe.
 
 
-#std::any
+# std::any
 
 The C++17 solve this problem with the std::any. It gives you a chance to store anything in an object, and it reports errors (or throw exceptions) when you’d like to access a type that is not active.
 
@@ -48,7 +48,6 @@ std::any a(12);
 // set any value:
 a = std::string("Hello!");
 a = 16;
-// reading a value:
 
 // we can read it as int
 std::cout << std::any_cast<int>(a) << '\n'; 
@@ -114,7 +113,7 @@ It is pretty cool. The Standard Library provide us the polymorphic wrapper capab
 The single problem with the std::any that is only available from C++17.
 
 
-#Solution
+# Solution
 
 Implement our costume polymorphic wrapper capable of holding any type, based on the std::any and boost::any.
 
@@ -259,7 +258,7 @@ private:
 
 Now as we can see, this is a polymorphic wrapper capable of holding any type. Moreover, this is useful when you want to store a heterogeneous collection, such as vector<Any>.
 
-Let's test it:
+Let's test it!
 
 
 {% highlight c++ %}
@@ -288,11 +287,11 @@ int main()
 }
 {% endhighlight  c++ %}
 
-My conclusion is better to use the Standard Library rather than rolling a custom implementation. You are avoid code maintance. However the costum any class is a perfect approach when you can not use C++17, but you have to use the polymorphic wrapper. 
+My conclusion that try to use the Standard Library rather than rolling a custom implementation. You are avoid code maintance and headache. However the costum any class is a perfect approach when you can not use C++17, but you have to use the polymorphic wrapper. 
 
 Thank you for reading!
 
-* Sources:
+### Sources:
     * [https://codereview.stackexchange.com/questions/20058/c11-any-class](https://codereview.stackexchange.com/questions/20058/c11-any-class)
     * [https://www.bfilipek.com/2018/06/any.html](https://www.bfilipek.com/2018/06/any.html)
     * [https://en.cppreference.com/w/cpp/utility/any](https://en.cppreference.com/w/cpp/utility/any)
