--- a/_publications/2017-10-01-any.md
+++ b/_publications/2017-10-01-any.md
@@ -29,12 +29,12 @@ Potentially, void* could be wrapped in a class with some type discriminator.
 {% highlight c++ %}
 class Any
 {
-    void* mValue;
+    void*    mValue;
     TypeInfo mTypeInfo;
 };
 {% endhighlight  c++ %}
 
-As you see, we have some basic form of the type, but it’s a bit of coding required to make sure Any is type-safe.
+As you see, we have some basic form of the type, but it’s a bit of coding required to make sure "any" is type-safe.
 
 
 # std::any
@@ -100,7 +100,7 @@ string: Hello World
 {% endhighlight  c++ %}
 
 
-It is pretty cool. The Standard Library provide us the polymorphic wrapper capable of holding any type. 
+It is pretty cool! The STD provide us the polymorphic wrapper capable of holding any type. 
 
   * std::any is not a template class like std::optional or std::variant.
   * by default it contains no value, and you can check it via .has_value().
@@ -110,7 +110,7 @@ It is pretty cool. The Standard Library provide us the polymorphic wrapper capab
   * you can access the value by using std::any_cast<T>, it will throw bad_any_cast if the active type is not T.
   * you can discover the active type by using .type() that returns std:: type_info of the type.
 
-The single problem with the std::any that is only available from C++17.
+The only problem with the std::any is that it's only available from C++17.
 
 
 # Solution
@@ -118,8 +118,6 @@ The single problem with the std::any that is only available from C++17.
 Implement our costume polymorphic wrapper capable of holding any type, based on the std::any and boost::any.
 
 {% highlight c++ %}
-using namespace std;
-
 template<class T>
 using StorageType = typename decay<typename remove_reference<T>::type>::type;
 
@@ -291,7 +289,8 @@ My conclusion that try to use the Standard Library rather than rolling a custom 
 
 Thank you for reading!
 
-### Sources:
+# Sources:
+
     * [https://codereview.stackexchange.com/questions/20058/c11-any-class](https://codereview.stackexchange.com/questions/20058/c11-any-class)
     * [https://www.bfilipek.com/2018/06/any.html](https://www.bfilipek.com/2018/06/any.html)
     * [https://en.cppreference.com/w/cpp/utility/any](https://en.cppreference.com/w/cpp/utility/any)
