--- a/_publications/2017-09-28-xmacros.md
+++ b/_publications/2017-09-28-xmacros.md
@@ -277,7 +277,7 @@ The X Macro technique works with any language with a half-decent text macro prep
 
 Thank you for reading!
 
-* ###Sources:
+* #Sources:
 	* [http://saltares.com/blog/](http://saltares.com/blog/)
     * [http://coding-scars.com/x-macros/](http://coding-scars.com/x-macros/)
     * [https://dustri.org/b/min-and-max-macro-considered-harmful.html](https://dustri.org/b/min-and-max-macro-considered-harmful.html)
