--- a/_publications/2017-10-01-any.md
+++ b/_publications/2017-10-01-any.md
@@ -289,7 +289,7 @@ My conclusion that try to use the Standard Library rather than rolling a custom 
 
 Thank you for reading!
 
-* ###Sources:
+* #Sources:
     * [https://codereview.stackexchange.com/questions/20058/c11-any-class](https://codereview.stackexchange.com/questions/20058/c11-any-class)
     * [https://www.bfilipek.com/2018/06/any.html](https://www.bfilipek.com/2018/06/any.html)
     * [https://en.cppreference.com/w/cpp/utility/any](https://en.cppreference.com/w/cpp/utility/any)
