--- a/_publications/2017-09-28-xmacros.md
+++ b/_publications/2017-09-28-xmacros.md
@@ -2,7 +2,7 @@
 title: "X-Macros"
 collection: publications
 permalink: /publications/2017-09-28-xmacros
-excerpt: 'Mystery of X-Macros'
+excerpt: "<i>Mystery of X-Macros</i>`c++11` `macros` `code generation`"
 tags:
   - c++11
   - macros
@@ -277,7 +277,8 @@ The X Macro technique works with any language with a half-decent text macro prep
 
 Thank you for reading!
 
-* #Sources:
+
+* Sources:
 	* [http://saltares.com/blog/](http://saltares.com/blog/)
     * [http://coding-scars.com/x-macros/](http://coding-scars.com/x-macros/)
     * [https://dustri.org/b/min-and-max-macro-considered-harmful.html](https://dustri.org/b/min-and-max-macro-considered-harmful.html)
