--- a/_publications/2017-09-28-xmacros.md
+++ b/_publications/2017-09-28-xmacros.md
@@ -2,7 +2,7 @@
 title: "X-Macros"
 collection: publications
 permalink: /publications/2017-09-28-xmacros
-excerpt: "<i>Mystery of X-Macros</i>`c++11` `macros` `code generation`"
+excerpt: "<i>Mystery of X-Macros</i><br/>`c++11` `macros` `code generation`"
 tags:
   - c++11
   - macros
