--- a/_publications/2017-10-01-any.md
+++ b/_publications/2017-10-01-any.md
@@ -3,7 +3,7 @@ title: "Any"
 collection: publications
 permalink: /publications/2017-10-01-any
 excerpt: 'Polymorphic wrapper in C++'
-excerpt: "<i>Polymorphic wrapper in C++</i>`polymorphic wrapper` `c++11` `variant-type`"
+excerpt: "<i>Polymorphic wrapper in C++</i><br/>`polymorphic wrapper` `c++11` `variant-type`"
 tags:
   - polymorphic wrapper
   - c++11
