--- a/_publications/2017-09-01-welcome.md
+++ b/_publications/2017-09-01-welcome.md
@@ -2,7 +2,7 @@
 title: "Welcome"
 collection: publications
 permalink: /publications/2017-09-01-welcome
-excerpt: "<i>Lets start it...</i><br/>`General` `Welcome`"
+excerpt: "<i>Lets start it...</i><br/>`general` `welcome`"
 tags:
   - general
   - welcome
