--- a/_publications/2017-09-28-xmacros.md
+++ b/_publications/2017-09-28-xmacros.md
@@ -2,10 +2,10 @@
 title: "X-Macros"
 collection: publications
 permalink: /publications/2017-09-28-xmacros
-excerpt: "<i>Mystery of X-Macros</i><br/>`c++11` `macros` `code generation`"
+excerpt: "<i>Mystery of X-Macros</i><br/>`macros` `c++11` `code generation`"
 tags:
-  - c++11
   - macros
+  - c++11
   - code generation
 ---
 
