FIX: Wrong tag semantic

--- a/_publications/2019-12-10-std_move.md
+++ b/_publications/2019-12-10-std_move.md
@@ -3,7 +3,7 @@ title: "std::move"
 collection: publications
 permalink: /publications/2019-12-10-std_move
 excerpt: 'std::move'
-excerpt: "<i>std::move</i><br/>`std` `c++14` `standard library` 
+excerpt: "<i>std::move</i><br/>`std` `c++14` `standard library`"
 tags:
   - std
   - c++14
