--- a/_publications/2019-12-10-std_move.md
+++ b/_publications/2019-12-10-std_move.md
@@ -22,16 +22,19 @@ Before to continue this article, I highly recomend that *read the my article abo
 
 # The Basics
 
-Move semantics essentially just allow us to move objects around. This wasn't possible before c++11. The c++11 introduced the rvalue references, which are necessery for the move semantics. 
+Move semantics essentially just allow us to move objects around. This wasn't possible before C++11. The C++11 introduced the rvalue references, which are necessery for the move semantics. 
 The basic idea is when we are writing a C++ code, there are lot of cases in which we don't really need to or want to necessarily copy an object one place from the other.
 
 
 For example: 
-- If passing an object into a function that then is going to take the ownership of that object, i have no choice to copy it. 
-- The same things occur when I want to return an object from a function. I still have to create that object inside that actual function and then return it. Which means that again i'm copyng that data.
+- If passing an object into a function that then is going to take the ownership of that object, i have no choice to move it. I need to copy
+
+- The same things occur when I want to return an object from a function. I still have to create that object inside that actual function and then return it. Which means that I'm coping that data again.
+
+
+Yes... I know...Now many reader says..
 
 ![](example.gif)
-
 
 Let's write the example why exactly we might want to move something.
 
@@ -121,7 +124,7 @@ Where is the problem? The answer is at the **COPY CONSTRUCTOR** line print. This
 Why it is a problem? It is a problem, because when we copy the string, we need to allocate the memory on the heap with *mData = new char[mSize];*. Say with the other words, when we excecute the *Entity lEntity( String("MyEntity") );* we are allocate the memory **TWICE**. Create first of the scope of *" String("MyEntity")"* and then the secondly at *"Entity(const String& aName): mName(aName)"* we are copy the aName to the mName.
 
 
-###So the question why can't we just allocate the memory and then move it onto the other place? What we need to do?
+### So the question why can't we just allocate the memory and then move it onto the other place? What we need to do?
 
 
 # The std::move
