Order the publications by date

--- a/_publications/2019-12-10-std_move.md
+++ b/_publications/2019-12-10-std_move.md
@@ -1,8 +1,7 @@
 ---
-title: "std::move"
+title: "'What is std::move(), and when should it be used?"
 collection: publications
 permalink: /publications/2019-12-10-std_move
-excerpt: 'std::move'
 excerpt: "<i>std::move</i><br/>`std` `c++14` `standard library`"
 tags:
   - std
